Fixat så cartCounter uppdateras i real-time.  All produkt information skapas med classer, input fields töms efter add-to-cart tycks och placeholder lämnas kvar med input-värdet. Done Shopping tar en nu till cart sidan, Lagt in kommentarer

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "animejs": "^3.2.1",
-    "firebase": "^9.17.2"
+    "firebase": "^9.17.2",
+    "js-cookie": "^3.0.1"
   },
   "devDependencies": {
     "live-server": "^1.2.2"
